fixed wrapping and alignment of store cost desktop

--- a/src/app/components/store-building/store-building.component.css
+++ b/src/app/components/store-building/store-building.component.css
@@ -24,12 +24,13 @@
 
 .store-cost {
   text-align: left;
-  font-size: 20px;
+  font-size: 19px;
   margin-bottom: 0;
 }
 
 .store-cost img {
   width: 20px;
+  margin-bottom: 5px;
 }
 
 .store-title {
